# moss-google

./: README.md  pyproject.toml
moss_google/: uninstall.py
tests/: test_uninstall.py
