[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moss-google"
version = "0.1.0"
description = "MOSS cryptographic signing for Google GenAI/Gemini SDK outputs"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Carey D'Souza" }]
keywords = ["ai", "agents", "google", "gemini", "genai", "signing", "cryptography", "moss"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "moss-sdk>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "google-generativeai>=0.4.0",
]

[project.urls]
Homepage = "https://mosscomputing.com"
Repository = "https://github.com/mosscomputing/moss-google"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["moss_google"]
